@@ -3,18 +3,24 @@ import Dependencies._
 
 lazy val root = (project in file("."))
   .enablePlugins(JavaAppPackaging)
+  .enablePlugins(JavaAgent)
   .enablePlugins(DockerPlugin)
   .settings(
     inThisBuild(List(
       organization := "com.seglo",
-      scalaVersion := "2.12.4",
+      scalaVersion := "2.12.8",
       version      := "0.1.0-SNAPSHOT"
     )),
     name := "kafka-slow-consumer",
     libraryDependencies ++= Seq(
-      "com.typesafe.akka" %% "akka-stream-kafka" % "0.22",
+      "com.typesafe.akka" %% "akka-slf4j" % "2.5.23",
+      "ch.qos.logback" % "logback-classic" % "1.2.3",
+      "org.slf4j" % "log4j-over-slf4j" % "1.7.26",
+      "com.typesafe.akka" %% "akka-stream-kafka" % "1.0.4",
       scalaTest % Test
     ),
+    javaAgents += JavaAgent("io.prometheus.jmx" % "jmx_prometheus_javaagent" % "0.11.0", arguments = "8080:/opt/docker/conf/jmx-prometheus-exporter-config.yaml"),
+    mappings in Universal += file("conf/jmx-prometheus-exporter-config.yaml") -> "conf/jmx-prometheus-exporter-config.yaml",
     dockerUsername := Some("seglo"),
     // Based on best practices found in OpenShift Creating images guidelines
     // https://docs.openshift.com/container-platform/3.10/creating_images/guidelines.html
@@ -26,6 +32,8 @@ lazy val root = (project in file("."))
       Cmd("RUN",            "chgrp -R 0 /opt && chmod -R g=u /opt"),
       Cmd("WORKDIR",        "/opt/docker"),
       Cmd("USER",           "1001"),
-      ExecCmd("CMD",        "/opt/docker/bin/kafka-slow-consumer", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap")
+      ExecCmd("CMD",        "/opt/docker/bin/kafka-slow-consumer")
     )
   )
+
+resolvers in ThisBuild += Resolver.mavenLocal
